--- a/ethernet/ethernet.sdk/webtalk/usage_statistics_ext_sdk.html
+++ b/ethernet/ethernet.sdk/webtalk/usage_statistics_ext_sdk.html
@@ -4,12 +4,12 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>false</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>2019.1</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>2019-11-20 18:38:27</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>2019-11-21 19:32:30</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>amd64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>SDK v2019.1</TD>
-  <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>2019.1_2</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>2</TD>
-  <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>s40h64q66csjkt9dcbbiunhcoe</TD>
+  <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>2019.1_4</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>4</TD>
+  <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>67i8ssm7uoh08vpb63schdfml</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>211027694_1777504441_210661626_020</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>NA</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>target_device</B></TD><TD>NA</TD>
@@ -21,7 +21,7 @@
  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>user_environment</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>cpu_name</B></TD><TD>Intel(R) Core(TM) i7-6700 CPU @ 3.40GHz</TD>
-  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>3639.062 MHz</TD>
+  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>3763.773 MHz</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>os_name</B></TD><TD>Ubuntu</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_release</B></TD><TD>Ubuntu 14.04.6 LTS</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>system_ram</B></TD><TD>8.117 GB</TD>
@@ -34,31 +34,7 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='1'><B>sdk</B></TD></TR>
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
-    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>application/1574276351000</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>apptemplate=lwip_echo_server</TD>
-    <TD>bspid=1574276346000</TD>
-    <TD>hwid=1572639618000</TD>
-    <TD>langused=C</TD>
-</TR><TR ALIGN='LEFT'>    <TD>newbsp=true</TD>
-    <TD>os=standalone</TD>
-    <TD>procused=microblaze</TD>
-    <TD>recordtype=APPCreation</TD>
-</TR><TR ALIGN='LEFT'>    <TD>uid=1574276351000</TD>
-</TR>   </TABLE>
-   </TD></TR>
-   <TR><TD>
-   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
-    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>bsp/1574276346000</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>apptemplate=lwip_echo_server</TD>
-    <TD>hwid=1572639618000</TD>
-    <TD>os=standalone</TD>
-    <TD>recordtype=BSPCreation</TD>
-</TR><TR ALIGN='LEFT'>    <TD>uid=1574276346000</TD>
-</TR>   </TABLE>
-   </TD></TR>
-   <TR><TD>
-   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
-    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>bsp/1574293107333</B></TD></TR>
+    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>bsp/1574382750843</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>bootgencount=0</TD>
     <TD>crosstriggcount=0</TD>
     <TD>debugcount=0</TD>
@@ -67,6 +43,22 @@
     <TD>qemudebugcount=0</TD>
     <TD>recordtype=ToolUsage</TD>
     <TD>uid=NA</TD>
+</TR>   </TABLE>
+   </TD></TR>
+   <TR><TD>
+   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
+    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>hardware/1574373937000</B></TD></TR>
+<TR ALIGN='LEFT'>    <TD>apptemplate=NA</TD>
+    <TD>arch=artix7</TD>
+    <TD>device=7a100t</TD>
+    <TD>ishandoff=true</TD>
+</TR><TR ALIGN='LEFT'>    <TD>iszynq=false</TD>
+    <TD>iszynqmp=false</TD>
+    <TD>os=NA</TD>
+    <TD>processors=1</TD>
+</TR><TR ALIGN='LEFT'>    <TD>recordtype=HWCreation</TD>
+    <TD>uid=1574373937000</TD>
+    <TD>vivadoversion=2019.1.2</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
